# yunsheng-skills

./: .gitignore  CLAUDE.md  build.py  otlg.spec  pyproject.toml
.claude/: settings.json
.claude/skills/ontology-explorer/: README.md  SKILL.md
.claude/skills/ontology-explorer/references/: CLI.md  DOMAINS.md
.claude/skills/ontology-explorer/scripts/: check_otlg.sh
.github/workflows/: build.yml
docs/: skill-usage-guide.md
ontology_explorer/: API.md  config.example.json  seed.py
ontology_explorer/cli/: __main__.py  commands.py
ontology_explorer/core/: __init__.py  models.py  query.py  rest_store.py  store.py
ontology_explorer/data/: ontology.json
ontology_explorer/data/instances/: ecommerce.json  finance.json  healthcare.json  supply_chain.json
scripts/: INSTALL.md  build.py  otlg.spec  otlg_entry.py
skills/ontology-explorer/: ARCHITECTURE.md  INSTALL.md  README.md  SKILL.md
skills/ontology-explorer/references/: CLI.md  DOMAINS.md  INSTALL.md
