[project]
name = "yunsheng-skills"
version = "0.1.0"
description = "Ontology Explorer CLI (otlg) and Claude Code Agent Skill for querying business ontology data"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
otlg = "ontology_explorer.cli.__main__:main"

[dependency-groups]
dev = ["pyinstaller>=6.19.0"]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["ontology_explorer*"]

[tool.setuptools.package-data]
ontology_explorer = ["data/**/*.json"]
